Add GET /user/engineer/{userID}/file endpoint
