# api/openapi.yaml
@@ -575,6 +575,29 @@ paths:
         "500":
           description: Server error
       x-swagger-router-controller: Engineer
+    get:
+      tags:
+        - engineer
+      summary: View the file containing data from the sensors
+      description: Returns a file containing data from the sensors based on a single ID
+      operationId: viewFile
+      parameters:
+        - name: userID
+          in: path
+          description: This is the unique identifier of the user
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: File successfully fetched.
+          content:
+            application/json:
+              schema:
+                type: object
+        '404':
+          description: File not found.  
+      x-swagger-router-controller: Engineer
   /user/{userID}/profilePage:
     put:
       tags:
