# service/EngineerService.js
@@ -1,5 +1,5 @@
 'use strict';
-
+//var file = null;
 
 /**
  * Uploads a file containing data from the sensors
@@ -46,3 +46,17 @@ exports.postProposal = function(body,userID) {
   });
 }
 
+
+/**
+ * View the file containing data from the sensors
+ * Returns a file containing data from the sensors based on a single ID
+ *
+ * body Object 
+ * userID Integer This is the unique identifier of the user
+ * no response value expected for this operation
+ **/
+exports.viewFile = function(userID) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
